2010-11-30  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Ensure that the methods using url library
	works well for HTTP redirection.
	(twittering-send-http-request-urllib): make the variable,
	`url-http-attempt-keepalives', buffer-local in order to send the
	local value to the sentinel invoked for HTTP redirection. If the
	variable is not made buffer-local, the connection with redirection
	may not be closed according to its global value.

	* twittering-mode.el: Introduce an ad-hoc treatment for url
	library on Emacs21 again. This ensures that the sentinel for an
	redirect HTTP request, such as asynchronous retrieval of icon
	images, works well.
	(twittering-send-http-request): introduce an ad-hoc treatment for
	the url library again. It is required because the process for a
	redirected HTTP request is alive when the url library for Emacs21
	invokes the callback.
	(twittering-send-http-request-urllib): add an ad-hoc treatment for
	HTTP redirection on Emacs21.

2010-11-27  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix a bug of retrieving a URI repeatedly.
	(twittering-resolve-url-request): bind `additional-info' to the
	appropriate alist storing the URI that will be retrieved. The
	alist is referred by `twittering-url-retrieve-async-sentinel' and
	`twittering-url-retrieve-async-clean-up-sentinel'. Since the alist
	was null, a URI might be retrieved repeatedly.

2010-11-25  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Delay next asynchronous retrieval until all
	sentinels for the current retrieval finish.
	(twittering-url-retrieve-async-sentinel): call
	`twittering-resolve-url-request' after sentinels finish.
	(twittering-url-retrieve-async-clean-up-sentinel): call
	`twittering-resolve-url-request' only when the current retrieval
	is failed.

	* twittering-mode.el: Periodically invoke actions associated with
	idle-timer even if Emacs remains idle long time.